--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Books</string>
     <string name="error_message">Error loading data from Google Book API</string>
+    <string name="icon">icon</string>
 </resources>
