--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Books</string>
     <string name="error_message">Error loading data from Google Book API</string>
     <string name="icon">icon</string>
+    <string name="search">search</string>
 </resources>
