--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="insert_author">Insert Author</string>
     <string name="insert_title">Insert Title</string>
     <string name="advanced_search">Advanced Search</string>
+    <string name="valid_search_message">Please enter valid search data!</string>
 </resources>
